--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -40,7 +40,7 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: ./task-definition.json
+          task-definition: task-definition.json
           container-name: wisd24/lumos-shiny-application
           image: ${{ steps.build-image.outputs.image }}
 
