--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -41,7 +41,7 @@ jobs:
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
           task-definition: task-definition.json
-          container-name: wisd24/lumos-shiny-application
+          container-name: LumosContainer
           image: ${{ steps.build-image.outputs.image }}
 
       - name: Deploy Task Definition
