--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -36,18 +36,18 @@ jobs:
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG 
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
-      - name: Update Task Definition
-        id: task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: task-definition.json
-          container-name: LumosContainer
-          image: ${{ steps.build-image.outputs.image }}
-
-      - name: Deploy Task Definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v2
-        with:
-          task-definition: ${{ steps.task-def.outputs.task-definition }}
-          service: FargateStack-LumosFargateService60F8F33A-J61oBGp18QkY
-          cluster: FargateStack-LumosCluster12DC2CAF-hBJvJvpqIeKS
-          wait-for-service-stability: true
+#      - name: Update Task Definition
+#        id: task-def
+#        uses: aws-actions/amazon-ecs-render-task-definition@v1
+#        with:
+#          task-definition: task-definition.json
+#          container-name: LumosContainer
+#          image: ${{ steps.build-image.outputs.image }}
+#
+#      - name: Deploy Task Definition
+#        uses: aws-actions/amazon-ecs-deploy-task-definition@v2
+#        with:
+#          task-definition: ${{ steps.task-def.outputs.task-definition }}
+#          service: FargateStack-LumosFargateService60F8F33A-J61oBGp18QkY
+#          cluster: FargateStack-LumosCluster12DC2CAF-hBJvJvpqIeKS
+#          wait-for-service-stability: true
